--- a/web/package.json
+++ b/web/package.json
@@ -12,15 +12,14 @@
     "docker": "NODE_ENV=development grunt coffee && node bin/lib/index.js"
   },
   "dependencies": {
+    "@horizon/client": "^2.0.0",
     "babel-cli": "^6.0.14",
     "babel-plugin-syntax-jsx": "^6.0.14",
-    "babel-preset-es2015": "^6.0.14",
-    "babel-preset-react": "^6.0.14",
     "classnames": "^2.2.3",
     "forerunnerdb": "^1.3.452",
     "lokijs": "^1.3.10",
     "rc-switch": "^1.3.1",
-    "react": "^15.3.1",
+    "react": "^15.6.1",
     "react-addons-update": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-input-autosize": "^0.6.6",
@@ -32,20 +31,22 @@
     "redux-devtools": "^3.0.0",
     "redux-persist": "^1.4.10",
     "redux-router": "^0.1.0",
-    "redux-simple-router": "^1.0.1",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10"
+    "redux-simple-router": "^1.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.0.14",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^1.8.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-loader": "^1.1.0",
     "eslint-plugin-react": "^3.6.3",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
-    "webpack": "^1.12.2"
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "webpack": "^1.15.0"
   }
 }
