--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
+    "start": "npm run build:live",
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node src/index.js",
-    "serve-prod": "NODE_ENV=prod node src/index.js"
+    "serve": "ts-node src/index.ts",
+    "serve-prod": "NODE_ENV=prod ts-node src/index.ts"
   },
   "dependencies": {
     "@horizon/server": "^2.0.0",
@@ -17,6 +19,16 @@
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.1",
-    "toml": "^2.3.2"
+    "pg-promise": "^6.3.5",
+    "toml": "^2.3.2",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^8.0.13",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.11.0",
+    "ts-node": "^3.2.0",
+    "typescript": "^2.4.1"
   }
 }
